<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:orientation="vertical">

    <android.support.design.widget.TabLayout
        android:id="@+id/tab_login"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/default_color_theme"
        app:tabSelectedTextColor="@color/default_color_theme"
        app:tabTextColor="@color/color96" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/default_divider_line" />

    <EditText
        android:id="@+id/et_login_phone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="left"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:drawableLeft="@mipmap/rd_login_phone"
        android:drawablePadding="10dp"
        android:hint="@string/rd_login_hint_phone"
        android:inputType="number"
        android:maxLength="11"
        android:paddingLeft="10dp"
        android:textColor="#000"
        android:textColorHint="@color/default_hint_color"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/default_divider_line" />

    <RelativeLayout
        android:id="@+id/get_code_rl"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <EditText
            android:id="@+id/auth_num"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/rd_login_hint_code"
            android:inputType="number"
            android:paddingLeft="10dp"
            android:textColor="#000"
            android:textColorHint="@color/default_hint_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_get_auth"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_get_code_bg"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/rd_get_phone_code"
            android:enabled="false"
            android:textColor="#ffffff"
            android:textSize="13sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/psd_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="left"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:drawableLeft="@mipmap/rd_login_password"
        android:drawablePadding="10dp"
        android:hint="@string/rd_login_hint_psw"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColor="#000"
        android:textColorHint="@color/default_hint_color"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/default_divider_line" />

    <com.xr.ruidementality.widget.TextViewWithBg
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:text="@string/rd_login"
        android:textColor="@color/default_color_theme"
        android:textSize="18sp"
        app:tv_bg_color="#00000000"
        app:tv_bg_stroke_color="@color/default_color_theme"
        app:tv_corner_radius="5dp"
        app:tv_stroke_width="1dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/tv_find_psd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/rd_forget_psw"
            android:textColor="@color/color96"
            android:textSize="14sp" />
    </RelativeLayout>
</LinearLayout>